--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -1,12 +1,12 @@
-fieldset label {
+/*fieldset label {
   display: block;
 
   font-size: 1.1em;
   font-weight: bold;
   padding-left: 10px;
-}
+}*/
 
-fieldset#creation-print {
+/*fieldset#creation-print {
    font-size: 0.9em;
 }
 
@@ -23,7 +23,7 @@ fieldset li.inline label {
 
 fieldset#creation-print {
    float: right;
-}
+}*/
 
 fieldset li.required label {
    font-weight: bold;
@@ -43,9 +43,16 @@ input, textarea {
     background-color: #cdc1a8;
   }
 
-  border-style: solid;
-  border-width: 1px;
-  border-color: #4c2719;
-
+  border: 1px solid #4c2719;
   border-radius: 0;
+}
+
+.form_login {
+  text-align: right;
+}
+
+.search {
+  float: right;
+  position: relative;
+  right: 40px;
 }
