--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,6 +19,11 @@
  *= require forms
  */
 
+table {
+    width: 100%;
+    overflow: auto;
+}
+
 table tr.even td {
     background-color: linen;
 }
@@ -27,7 +32,40 @@ table tr.odd td {
     background-color: lightblue;
 }
 
+table thead {
+    background-color: #faaa00;
+}
+
+table.fixed {
+    width: 100%;
+    table-layout: fixed;
+}
+
+table.fixed tr:hover {
+    background-color: darkkhaki;
+}
+
+table.fixed td:nth-of-type(1) {
+    width: 75px;
+    text-align: center;
+}
+
+table.fixed td:nth-of-type(2) {
+    width: calc(100% - 75px - 24px);
+    text-align: justify;
+}
+
+table.fixed td:nth-of-type(3) {
+    width: 20px;
+    text-align: center;
+}
+
 body {
-    background-image:url("wood_bg.jpg");
-    font: 14px Georgia, serif;
+    background-image: url("wood_bg.jpg");
+}
+
+body, p, ol, ul, td {
+    font-family: verdana, arial, helvetica, sans-serif;
+    font-size: 13px;
+    line-height: 18px;
 }
