--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -1,5 +1,5 @@
 <%= form_for :support, url: authenticate_path do |f| %>
-    <div class="label">
+    <div class="form_login">
       <div>
         <%= f.label :Login, class: 'label' %>
         <%= f.text_field :login %>
