--- a/app/views/notification_mailer/ticket_status_changed.html.erb
+++ b/app/views/notification_mailer/ticket_status_changed.html.erb
@@ -8,7 +8,7 @@
 
     <h1>Hello <%= @ticket.username %></h1>
     <p>
-      Ticket state [<a href="<%= 'http://localhost:3000/ticket/'+@ticket.uuid %>">UUID: <%= @ticket.uuid %></a>] is changed, maybe it is improtant for you.<br>
+      Ticket state [<a href="<%= 'http://localhost:3000/ticket/'+@ticket.uuid %>">UUID: <%= @ticket.uuid %></a>] is changed, maybe it is important for you.<br>
       Please check you ticket.
     </p>
     </body>
