--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,9 +1,9 @@
-<table>
+<table width="100%">
   <thead>
     <tr>
       <th width="30%">Name</th>
       <th width="60%">Description</th>
-      <th colspan="3"></th>
+      <th colspan='3'>Actions</th>
     </tr>
   </thead>
 
@@ -13,9 +13,9 @@
         <td><%= raw role.name %></td>
         <td><%= raw role.description %></td>
 
-        <td><%= link_to image_tag('edit-icon.png'), edit_role_path(role) %></td>
+        <td align='center'><%= link_to image_tag('edit-icon.png'), edit_role_path(role) %></td>
         <%= admin_area do %>
-          <td><%= link_to image_tag('delete-trash.png'), role, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td align='center'><%= link_to image_tag('delete-trash.png'), role, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
     <% end %>
