--- a/app/views/supports/_table_row.html.erb
+++ b/app/views/supports/_table_row.html.erb
@@ -7,8 +7,8 @@
 
   <td><%= h role.name %></td>
 
-  <td><%= link_to image_tag('edit-icon.png'), edit_support_path(support) %></td>
+  <td align='center'><%= link_to image_tag('edit-icon.png'), edit_support_path(support) %></td>
   <%= admin_area do %>
-    <td><%= link_to image_tag('delete-trash.png'), support_path(support), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td align='center'><%= link_to image_tag('delete-trash.png'), support_path(support), method: :delete, data: { confirm: 'Are you sure?' } %></td>
   <% end %>
 </tr>
