--- a/app/views/supports/index.html.erb
+++ b/app/views/supports/index.html.erb
@@ -1,12 +1,15 @@
 <table>
-  <tr>
-    <th>Login</th>
-    <th>Password</th>
-    <th>First name</th>
-    <th>Last name</th>
-    <th>E-mail</th>
-    <th>Role</th>
-  </tr>
+  <thead>
+      <tr>
+        <th>Login</th>
+        <th>Password</th>
+        <th>First name</th>
+        <th>Last name</th>
+        <th>E-mail</th>
+        <th>Role</th>
+        <th colspan='3'>Actions</th>
+      </tr>
+  </thead>
 
   <% @supports.each do |support| %>
     <% role = @roles.find_by id: support.role_id %>
