--- a/app/views/ticket_states/index.html.erb
+++ b/app/views/ticket_states/index.html.erb
@@ -1,8 +1,8 @@
-<table>
+<table width="100%">
   <thead>
   <tr>
     <th width=50%>Name</th>
-    <th colspan="3"></th>
+    <th colspan='3'>Actions</th>
   </tr>
   </thead>
 
@@ -11,9 +11,9 @@
       <tr class="<%= cycle('even', 'odd') %>">
         <td><%= ticket_state.name %></td>
 
-        <td><%= link_to image_tag('edit-icon.png'), edit_ticket_state_path(ticket_state) %></td>
+        <td align='center'><%= link_to image_tag('edit-icon.png'), edit_ticket_state_path(ticket_state) %></td>
         <%= admin_area do %>
-          <td><%= link_to image_tag('delete-trash.png'), ticket_state, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+          <td align='center'><%= link_to image_tag('delete-trash.png'), ticket_state, method: :delete, data: {confirm: 'Are you sure?'} %></td>
         <% end %>
       </tr>
   <% end %>
