--- a/app/views/tickets/_form_add_comment.html.erb
+++ b/app/views/tickets/_form_add_comment.html.erb
@@ -1,14 +1,13 @@
-<h2>Add a comment:</h2>
+<!--<h2 class="commenth2">Add a comment:</h2>-->
 
 <div>
-<%= form_for ([ticket, ticket.comments.build]) do |f| %>
+  <%# TODO: must be changed for avoiding empty and not completed comment when comment adding form is before list of comments %>
+  <%= form_for ([ticket, ticket.comments.build]) do |f| %>
     <%= f.hidden_field :owner_id, value: session[:user_id] %>
-    <p>
-      <%= f.text_area :body, cols: 60, rows: 10 %>
-    </p>
+    <%= f.text_area :body, cols: 120, rows: 5 %>
 
-    <p>
-      <%= f.submit %>
-    </p>
-<% end %>
+    <div>
+        <%= f.submit %>
+    </div>
+    <% end %>
 </div>
