--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,102 +1,70 @@
-<script>
-  $(document).ready(function() {
-    var m = $("#main");
-    var mw = m.width();
+<script type="text/javascript" charset="utf-8">
+    $(document).ready(function () {
+        $('.expand_button').click(function (e) {
+            e.preventDefault(e);
 
-    $(".d1").width( mw/2 );
-    $(".d2").width( mw/2 );
-    $(".d3").width( mw/2 );
-    $(".d4").width( mw/2 );
-});
+            var cell = $(this).parent('.cell');
+            cell.toggleClass('expanded');
+
+            var isExpanded = cell.hasClass('expanded');
+
+            if (isExpanded == true) {
+                $('.cell').hide();
+                cell.show();
+            }
+            else if (isExpanded == false)
+                $('.cell').show();
+        });
+    });
 </script>
 
-<div class="d1 row" id="left_top">
-  <!-- <p>Left top cell [unassigned]</p> -->
-  <table width="100%">
+<% content_for :thead do %>
     <thead>
-    <tr>
-      <th>UUID</th>
-      <th>State</th>
-      <th>Owner</th>
-      <th>Username</th>
-      <th>E-mail</th>
-      <th>Subject</th>
-      <th>Problem</th>
-      <th colspan="3">Actions</th>
-    </tr>
+    <tr> <th>UUID</th> <th>State</th> <th>Owner</th> <th>Username</th> <th>E-mail</th> <th>Subject</th> <th>Problem</th> <th colspan='3'>Actions</th> </tr>
     </thead>
+<% end %>
 
-    <tbody>
-    <%= render partial: 'tickets/table_row', collection: unassigned, as: :ticket %>
-    </tbody>
+<div class="cell">
+  Left top cell [unassigned]
+  <%= link_to image_tag('expand-icon.png'), '#', class: 'expand_button'  %>
+
+  <table>
+    <%= yield :thead %>
+
+    <tbody> <%= render partial: 'tickets/table_row', collection: unassigned, as: :ticket %> </tbody>
   </table>
 </div>
 
+<div class="cell">
+  Right top cell [opened]
+  <%= link_to image_tag('expand-icon.png'), '#', class: 'expand_button' %>
 
-<div class="d2 row" id="right_top">
-  <!-- <p>Right top cell [opened]</p> -->
-  <table width="100%">
-    <thead>
-    <tr>
-      <th>UUID</th>
-      <th>State</th>
-      <th>Owner</th>
-      <th>Username</th>
-      <th>E-mail</th>
-      <th>Subject</th>
-      <th>Problem</th>
-      <th colspan="3">Actions</th>
-    </tr>
-    </thead>
+  <table>
+    <%= yield :thead %>
 
-    <tbody>
-    <%= render partial: 'tickets/table_row', collection: Ticket.where('support_id IS NULL'), as: :ticket %>
-    </tbody>
+    <tbody> <%= render partial: 'tickets/table_row', collection: Ticket.where('support_id IS NULL'), as: :ticket %> </tbody>
   </table>
 </div>
 
+<div class="cell">
+  Left bottom cell [on hold]
+  <%= link_to image_tag('expand-icon.png'), '#', class: 'expand_button' %>
 
-<div class="d3 row" id="left_bottom">
-  <!-- <p>Left bottom cell [on hold]</p> -->
-  <table width="100%">
+  <table>
     <thead>
-    <tr>
-      <th>UUID</th>
-      <th>State</th>
-      <th>Owner</th>
-      <th>Username</th>
-      <th>E-mail</th>
-      <th>Subject</th>
-      <th>Problem</th>
-      <th colspan="3">Actions</th>
-    </tr>
-    </thead>
+    <%= yield :thead %>
 
-    <tbody>
-    <%= render partial: 'tickets/table_row', collection: onhold, as: :ticket %>
-    </tbody>
+    <tbody> <%= render partial: 'tickets/table_row', collection: onhold, as: :ticket %> </tbody>
   </table>
 </div>
 
+<div class="cell">
+  Right bottom cell [closed]
+  <%= link_to image_tag('expand-icon.png'), '#', class: 'expand_button' %>
 
-<div class="d4 row" id="right_bottom">
-  <!-- <p>Right bottom cell [closed]</p> -->
-  <table width="100%">
-    <thead>
-    <tr>
-      <th>UUID</th>
-      <th>State</th>
-      <th>Owner</th>
-      <th>Username</th>
-      <th>E-mail</th>
-      <th>Subject</th>
-      <th>Problem</th>
-      <th colspan="3">Actions</th>
-    </tr>
-    </thead>
+  <table>
+    <%= yield :thead %>
 
-    <tbody>
-    <%= render partial: 'tickets/table_row', collection: closed, as: :ticket %>
-    </tbody>
+    <tbody> <%= render partial: 'tickets/table_row', collection: closed, as: :ticket %> </tbody>
   </table>
 </div>
