--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,7 +1,7 @@
 <%= render 'form' %>
 
 <% if authorized? %>
-  <%= link_to 'Back', controller: 'tickets', action: 'index' %>
+  <%#= link_to 'Back', controller: 'tickets', action: 'index' %>
 <% else %>
-  <%= link_to 'New ticket', controller: 'tickets', action: 'new' %>
+  <%#= link_to 'New ticket', controller: 'tickets', action: 'new' %>
 <% end %>
