--- a/app/assets/stylesheets/tickets.css.scss
+++ b/app/assets/stylesheets/tickets.css.scss
@@ -51,22 +51,10 @@ ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,body,html,p,blockquote,fieldset,input {
   filter: alpha(opacity=90);
   opacity: .90; }
 
-/* another RGBA background, now with an opacity of 0.8 */
-/*
-#menu ul li a.active {
-  background: rgba(255,138,30,0.8) !important;
-}
-*/
-
-/* main contents with RGBA background (same colour as active tab) and three rounded corners
- width:1200px; margin-left:10px;
-*/
-
 $height: 780px;
 
 #main {
   clear: both;
-//  background: rgba(255,138,30,0.8);
 
   margin: 0;
   padding: 0;
@@ -81,6 +69,7 @@ $bgcolor: #806a2e;
 $step: 5%;
 
 .cell {
+  overflow-y: auto;
   width: 50%;
   height: 50%;
   float: left;
@@ -94,10 +83,14 @@ $step: 5%;
   }
 
   box-sizing: border-box;
+}
 
-  .toolbar {
-    background-color: darken(#faaa00, 10%);
-  }
+.cell header {
+  background-color: #373737;
+  color: darkorange;
+  line-height: 30px;
+  padding-left: 20px;
+  margin: 0 2px;
 }
 
 .expanded {
@@ -106,28 +99,25 @@ $step: 5%;
 }
 
 .expand_button {
+  padding: 2px 1px;
+  background-color: #bc471d;
 
+  height: 16px;
+  width: 16px;
+
+  :active, :focus {
+      outline: none;
+  }
+
+  a {
+    vertical-align: -3px;
+  }
 }
 
-#main p {
-  padding-bottom: 20px;
-  color: #ddd;
-}
-
-.status {
-  color: blue;
-}
-
-.owner_support {
-  color: green;
-}
-
-.owner_customer {
-  color: red;
-  font-weight: bold;
-}
-
-.admin {
-  color: red;
-  font-weight: bold;
+.problem {
+  margin: 5px 20px;
+  padding: 3px;
+  text-align: justify;
+  border-left: 1px solid #000000;
+  border-right: 1px solid #000000;
 }
