--- a/app/views/tickets/_form_add_comment.html.erb
+++ b/app/views/tickets/_form_add_comment.html.erb
@@ -6,7 +6,7 @@
     <%= f.hidden_field :owner_id, value: session[:user_id] %>
     <%= f.text_area :body, cols: 120, rows: 5 %>
 
-    <div>
+    <div style="margin-left: 20px;">
         <%= f.submit %>
     </div>
     <% end %>
