--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -44,7 +44,9 @@ input, textarea {
   }
 
   border: 1px solid #4c2719;
-  border-radius: 0;
+  border-radius: 0px;
+  padding: 3px;
+  margin-left: 20px;
 }
 
 .form_login {
