--- a/app/views/tickets/_comments.html.erb
+++ b/app/views/tickets/_comments.html.erb
@@ -1,7 +1,5 @@
 <% if ticket.comments.size > 0 %>
-
-    <div class="comments_area">
-      <h2 class="comment_h2">Comments</h2>
+      <h2 class="comment_header"><%= ticket.comments.count %> Comments: </h2>
       <% ticket.comments.each do |comment| %>
           <% if !comment.id.nil? %> <%# temporary solution look into partial form_add_comment %>
             <table class="comment fixed">
@@ -21,5 +19,4 @@
             </table>
           <% end %>
       <% end %>
-    </div>
 <% end %>
