--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -36,7 +36,7 @@ footer#page_footer {
   width: calc(100% - 40px);
 
   // lock to bottom edge
-  position: absolute;
+  position: fixed;
   bottom: 0;
 
   ul {
