Redesign all views and related css style

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -1,13 +1,9 @@
-/*fieldset label {
+fieldset label {
   display: block;
 
   font-size: 1.1em;
   font-weight: bold;
   padding-left: 10px;
-}*/
-
-/*fieldset#creation-print {
-   font-size: 0.9em;
 }
 
 fieldset.inline label {
@@ -20,10 +16,6 @@ fieldset li.inline label {
   display: inline;
   width: 240px;
 }
-
-fieldset#creation-print {
-   float: right;
-}*/
 
 fieldset li.required label {
    font-weight: bold;
