--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -1,5 +1,3 @@
-<h1>Editing role</h1>
+<header class="index_header">Editing role</header>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', controller: 'roles', action: 'index' %>
