--- a/app/views/ticket_states/edit.html.erb
+++ b/app/views/ticket_states/edit.html.erb
@@ -1,5 +1,3 @@
-<h1>Editing ticket_state</h1>
+<header class="index_header">Editing ticket state</header>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', controller: 'ticket_states', action: 'index' %>
