--- a/app/views/ticket_states/new.html.erb
+++ b/app/views/ticket_states/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New ticket_state</h1>
+<header class="index_header">New ticket state</header>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'states' %>
