--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -5,6 +5,7 @@
 $header_height: 250px;
 
 .header {
+  clear: both;
   overflow-y: auto;
   width: 100%;
   height: $header_height;
@@ -12,10 +13,10 @@ $header_height: 250px;
   //background-color: darkkhaki;
 }
 
-.main {
+.comments_area {
+  clear: both;
   overflow-y: auto;
   width: 100%;
-  height: 780px - $header_height - 9px;
 }
 
 .comment {
@@ -31,6 +32,7 @@ $header_height: 250px;
 }
 
 .comment_header {
+  clear: both;
   background-color: #373737;
   color: darkorange;
   line-height: 35px;
