--- a/app/views/layouts/_home.html.erb
+++ b/app/views/layouts/_home.html.erb
@@ -1,11 +1,11 @@
 <% if flash[:notice] %>
-    <p class="notification notice">
+    <div id='notice' class="notification notice">
       <%= flash[:notice] %>
-    </p>
+    </div>
 <% end %>
 
 <% if flash[:alert] %>
-    <p class="notification alert">
+    <div id='alert' class="notification alert">
       <%= flash[:alert] %>
-    </p>
+    </div>
 <% end %>
