--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New role</h1>
+<header class="index_header">New role</header>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'roles' %>
