--- a/app/views/supports/new.html.erb
+++ b/app/views/supports/new.html.erb
@@ -1,7 +1,6 @@
-<h1>New support user</h1>
+<header class="index_header">New support user</header>
 
 <%= form_for :support, url: supports_path do |f| %>
-
     <% if @support.errors.any? %>
         <div id='error_explanation'>
           <h2><%= pluralize(@support.errors.count, 'error') %> prohibited this support from being saved:</h2>
@@ -13,49 +12,75 @@
         </div>
     <% end %>
 
-    <p>
-      <%= f.label :login %>
-      <%= raw f.text_field :login %>
-    </p>
+    <table style="border-collapse: collapse;">
+      <tr bgcolor="#faebd7" style="height: 30px;">
+        <td align="right" style="font-weight: bold;">
+          <%= f.label :login %>
+        </td>
+        <td align="left" style="padding-left: 20px;">
+          <%= raw f.text_field :login, size: 40 %>
+        </td>
+      </tr>
 
-    <p>
-      <%= f.label :password %>
-      <%= raw f.password_field :password %>
-    </p>
+      <tr bgcolor="#faebd7" style="height: 30px;">
+        <td align="right" style="font-weight: bold;">
+          <%= f.label :password %>
+        </td>
+        <td align="left" style="padding-left: 20px;">
+          <%= raw f.password_field :password, size: 40 %>
+        </td>
+      </tr>
 
-    <p>
-      <%= f.label :first_name %>:
-      <%= raw f.text_field :first_name %>
-    </p>
+      <tr bgcolor="#faebd7" style="height: 30px;">
+        <td align="right" style="font-weight: bold;">
+          <%= f.label :first_name %>
+        </td>
+        <td align="left" style="padding-left: 20px;">
+          <%= raw f.text_field :first_name, size: 40 %>
+        </td>
+      </tr>
+      <tr bgcolor="#faebd7" style="height: 30px;">
+        <td align="right" style="font-weight: bold;">
+          <%= f.label :last_name %>
+        </td>
+        <td align="left" style="padding-left: 20px;">
+          <%= raw f.text_field :last_name, size: 40 %>
+        </td>
+      </tr>
 
-    <p>
-      <%= f.label :last_name %>:
-      <%= raw f.text_field :last_name %>
-    </p>
+      <tr bgcolor="#faebd7" style="height: 30px;">
+        <td align="right" style="font-weight: bold;">
+          <%= f.label 'E-mail' %>
+        </td>
+        <td align="left" style="padding-left: 20px;">
+          <%= raw f.text_field :email, size: 40 %>
+        </td>
+      </tr>
 
-    <p>
-      <%= f.label :email %>:
-      <%= raw f.text_field :email %>
-    </p>
-
-    <p>
-      <%= f.label :Role %>:
-      <select name='selected_role'>
-        <% @roles.each do |role| %>
-            <% if role.name == 'Guest' %>
-                <option value="<%= role.id %>" selected>
-            <% else %>
-                <option value="<%= role.id %>">
+      <tr bgcolor="#faebd7" style="height: 30px;">
+        <td align="right" style="font-weight: bold;">
+          <%= f.label :role %>
+        </td>
+        <td align="left" style="padding-left: 20px;">
+          <select name='selected_role'>
+            <% @roles.each do |role| %>
+                <% if role.name.downcase == 'guest' %>
+                    <option value="<%= role.id %>" selected>
+                <% else %>
+                    <option value="<%= role.id %>">
+                <% end %>
+                <%= role.name %>
+                </option>
             <% end %>
-            <%= role.name %>
-            </option>
-        <% end %>
-      </select>
-    </p>
+          </select>
+        </td>
+      </tr>
 
-    <p>
-      <%= f.submit %>
-    </p>
+      <tr bgcolor="#deb887" style="height: 30px">
+        <td></td>
+        <td align="right" style="padding-right: 20px">
+          <%= f.submit %>
+        </td>
+      </tr>
+    </table>
 <% end %>
-
-<%= link_to 'Back', controller: 'application', action: 'index', anchor: 'supports' %>
