--- a/app/views/tickets/edit.html.erb
+++ b/app/views/tickets/edit.html.erb
@@ -1,46 +1,69 @@
-<h1>Editing ticket</h1>
+<header class="index_header">Editing ticket</header>
 
 <%= form_for :ticket, url: ticket_path(@ticket), method: :patch do |f| %>
+    <% if @ticket.errors.any? %>
+        <div id='error_explanation'>
+          <h2><%= pluralize(@ticket.errors.count, 'error') %> prohibited this ticket from being saved:</h2>
 
-  <% if @ticket.errors.any? %>
-    <div id='error_explanation'>
-      <h2><%= pluralize(@ticket.errors.count, 'error') %> prohibited this ticket from being saved:</h2>
+          <ul>
+            <% @ticket.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
 
-      <ul>
-        <% @ticket.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+    <table style="border-collapse: collapse;">
+      <tr bgcolor="#faebd7" style="height: 30px;">
+        <td align="right" style="font-weight: bold;">
+          <%= f.label :'Owner' %>
+        </td>
+        <td align="left" style="padding-left: 20px;">
+          <%= f.collection_select :support_id, @supports, :id, :login_with_full_name, include_blank: true, :selected => @ticket.support_id, :size => 40 %>
+        </td>
+      </tr>
 
-  <%= f.collection_select :support_id, @supports, :id, :login_with_full_name, include_blank: true, :selected => @ticket.support_id %>
-  <br>
+      <tr bgcolor="#faebd7" style="height: 30px;">
+        <td align="right" style="font-weight: bold;">
+          <%= f.label :'State' %>
+        </td>
+        <td align="left" style="padding-left: 20px;">
+          <%= f.collection_select :ticket_state_id, @states, :id, :name, include_blank: true, :selected => @ticket.ticket_state_id %>
+        </td>
+      </tr>
 
-  <%= f.collection_select :ticket_state_id, @states, :id, :name, include_blank: true, :selected => @ticket.ticket_state_id %>
-  <br>
+      <tr bgcolor="#faebd7" style="height: 30px;">
+        <td align="right" style="font-weight: bold;">
+          <%= f.label :'E-mail' %>
+        </td>
+        <td align="left" style="padding-left: 20px;">
+          <%= h @ticket.email %>
+        </td>
+      </tr>
 
-  <strong>
-  <p>
-    <%= f.label :'E-mail' %>:
-    <%= h @ticket.email %>
-  </p>
+      <tr bgcolor="#faebd7" style="height: 30px;">
+        <td align="right" style="font-weight: bold;">
+          <%= f.label :Subject %>
+        </td>
+        <td align="left" style="padding-left: 20px;">
+          <%= h @ticket.subject %>
+        </td>
+      </tr>
 
-  <p>
-    <%= f.label :Subject %>:
-    <%= h @ticket.subject %>
-  </p>
+      <tr bgcolor="#faebd7" style="height: 30px;">
+        <td align="right" style="font-weight: bold;">
+          <%= f.label :Problem %>
+        </td>
+        <td align="left" style="padding-left: 20px;">
+          <%= h @ticket.problem %>
+        </td>
+      </tr>
 
-  <p>
-    <%= f.label :Problem %><br>
-    <%#= f.text_area :problem, cols: 60, rows: 10 %>
-    <%= h @ticket.problem %>
-  </p>
-  </strong>
-
-  <p>
-    <%= f.submit %>
-  </p>
+      <tr bgcolor="#deb887" style="height: 30px">
+        <td></td>
+        <td align="right" style="padding-right: 20px">
+          <%= f.submit %>
+        </td>
+      </tr>
+    </table>
 <% end %>
-
-<%= link_to 'Back', controller: 'tickets', action: 'index' %>
